[package]
name = "fishgame"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
macroquad-platformer = "0.1"
macroquad-tiled = "0.1"
macroquad-particles = { version = "0.1", features = ["nanoserde"] }
macroquad-profiler = { git = "https://github.com/not-fl3/macroquad.git" }
nanoserde = "0.1"

