[package]
name = "fishgame"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backroll = "0.2"
backroll_transport_udp = "0.1"
bitflags = "1.2"
bytemuck = { version = "1.5", features = ["derive"] }
bevy_tasks = "0.5"
macroquad = "0.3"
macroquad-platformer = "0.1"
macroquad-tiled = "0.1"
macroquad-particles = { version = "0.1", features = ["nanoserde"] }
macroquad-profiler = { git = "https://github.com/not-fl3/macroquad.git" }
nanoserde = "0.1"
ordered-float = "2.5"
portpicker = "0.1"
quad-net = { version = "0.1", features = ["nanoserde"] }
shared = { path = "../shared" }
