[package]
name = "server"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
macroquad-tiled = "0.1"
nanoserde = "0.1"
shared = { path = "../shared" }
quad-net = { version = "0.1", features = ["nanoserde"] }
rand = "0.8.4"
